--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,8 +7,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:layout_height="match_parent"
         tools:ignore="ExtraText">
 
         <!-- Icono Menú (parte superior izquierda) -->
@@ -16,6 +15,8 @@
             android:id="@+id/btnOpenMenu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:src="@drawable/ic_menu"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -25,12 +26,11 @@
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="140dp"
             android:text="Perfil"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/btnOpenMenu"
-            app:layout_constraintStart_toEndOf="@+id/btnOpenMenu"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/btnOpenMenu" />
 
         <!-- Icono Editar -->
@@ -40,14 +40,12 @@
             android:id="@+id/ivEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:contentDescription="Editar perfil"
             android:src="@drawable/ic_edit"
-            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.841"
-            app:layout_constraintStart_toEndOf="@+id/tvTitle"
-            app:layout_constraintTop_toTopOf="@+id/tvTitle"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/profileicon"
@@ -70,9 +68,11 @@
 
         <EditText
             android:id="@+id/editname"
-            android:layout_width="267dp"
-            android:layout_height="49dp"
+            android:layout_width="270dp"
+            android:layout_height="50dp"
             android:layout_marginTop="36dp"
+            android:editable="false"
+            android:enabled="false"
             android:inputType="text"
             android:text="Jhoanna Doe"
             app:layout_constraintEnd_toEndOf="parent"
@@ -89,9 +89,11 @@
 
         <EditText
             android:id="@+id/editemail"
-            android:layout_width="273dp"
+            android:layout_width="270dp"
             android:layout_height="50dp"
             android:layout_marginTop="36dp"
+            android:editable="false"
+            android:enabled="false"
             android:inputType="text"
             android:text="name@example.com"
             app:layout_constraintEnd_toEndOf="parent"
@@ -109,11 +111,14 @@
 
         <EditText
             android:id="@+id/editphone"
-            android:layout_width="274dp"
-            android:layout_height="40dp"
+            android:layout_width="270dp"
+            android:layout_height="50dp"
             android:layout_marginTop="36dp"
+            android:editable="false"
+            android:enabled="false"
             android:inputType="phone"
             android:text="123-456-7890"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintStart_toStartOf="parent"
