--- a/app/src/main/res/layout/fragment_editprofile.xml
+++ b/app/src/main/res/layout/fragment_editprofile.xml
@@ -8,30 +8,33 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
         tools:ignore="ExtraText">
 
         <!-- Icono Menú (parte superior izquierda) -->
-        <ImageView
-            android:id="@+id/btnOpenMenu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="Abrir menú"
-            android:src="@drawable/ic_menu"
+
+        <TextView
+            android:id="@+id/txtMenuConf2"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:fontFamily="sans-serif-medium"
+            android:paddingTop="20dp"
+            android:text="Edit Profile"
+            android:textAlignment="center"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Título "Perfil" (centrado verticalmente con el icono de menú) -->
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Perfil"
-            android:textSize="20sp"
-            android:textStyle="bold"
+        <View
+            android:id="@+id/lineaGris7"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="#D3D3D3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/btnOpenMenu" />
+            app:layout_constraintTop_toBottomOf="@+id/txtMenuConf2" />
+
+        <!-- Título "Perfil" (centrado verticalmente con el icono de menú) -->
 
 
         <!-- Label: Nombre -->
@@ -39,12 +42,12 @@
             android:id="@+id/profileicon"
             android:layout_width="132dp"
             android:layout_height="117dp"
-            android:layout_marginTop="44dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+            tools:layout_editor_absoluteY="120dp"
             tools:srcCompat="@tools:sample/avatars" />
 
+        <!-- EditText: Nombre -->
         <TextView
             android:id="@+id/viewname"
             android:layout_width="wrap_content"
@@ -52,9 +55,9 @@
             android:text="Nombre"
             app:layout_constraintBottom_toTopOf="@+id/editname"
             app:layout_constraintEnd_toEndOf="@+id/editname"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/editname" />
 
-        <!-- EditText: Nombre -->
         <EditText
             android:id="@+id/editname"
             android:layout_width="wrap_content"
@@ -68,6 +71,8 @@
             app:layout_constraintTop_toBottomOf="@+id/profileicon" />
 
         <!-- Label: Email -->
+
+        <!-- EditText: Email -->
         <TextView
             android:id="@+id/viewemail"
             android:layout_width="wrap_content"
@@ -75,9 +80,9 @@
             android:text="Email"
             app:layout_constraintBottom_toTopOf="@+id/editemail"
             app:layout_constraintEnd_toEndOf="@+id/editemail"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/editemail" />
 
-        <!-- EditText: Email -->
         <EditText
             android:id="@+id/editemail"
             android:layout_width="wrap_content"
@@ -91,6 +96,8 @@
             app:layout_constraintTop_toBottomOf="@+id/editname" />
 
         <!-- Label: Phone -->
+
+        <!-- EditText: Phone -->
         <TextView
             android:id="@+id/viewphone"
             android:layout_width="wrap_content"
@@ -98,9 +105,9 @@
             android:text="Phone"
             app:layout_constraintBottom_toTopOf="@+id/editphone"
             app:layout_constraintEnd_toEndOf="@+id/editphone"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/editphone" />
 
-        <!-- EditText: Phone -->
         <EditText
             android:id="@+id/editphone"
             android:layout_width="wrap_content"
@@ -114,6 +121,8 @@
             app:layout_constraintTop_toBottomOf="@+id/editemail" />
 
         <!-- Label: Change password -->
+
+        <!-- EditText: Contraseña -->
         <TextView
             android:id="@+id/viewPassword"
             android:layout_width="wrap_content"
@@ -121,9 +130,9 @@
             android:text="Change password"
             app:layout_constraintBottom_toTopOf="@+id/editPassword"
             app:layout_constraintEnd_toEndOf="@+id/editPassword"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/editPassword" />
 
-        <!-- EditText: Contraseña -->
         <EditText
             android:id="@+id/editPassword"
             android:layout_width="wrap_content"
@@ -142,7 +151,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            android:backgroundTint="@android:color/holo_red_dark"
+            android:backgroundTint="@color/fontMain"
             android:text="Confirm"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -161,6 +170,25 @@
             app:layout_constraintTop_toBottomOf="@+id/viewPassword"
             app:srcCompat="@drawable/ic_eye"
             tools:ignore="MissingConstraints" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="164dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.675"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtMenuConf2"
+            app:srcCompat="@drawable/ic_cam" />
+
+        <ImageView
+            android:id="@+id/btnOpenMenu"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_menu" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
