--- a/app/src/main/res/layout/fragment_editprofile.xml
+++ b/app/src/main/res/layout/fragment_editprofile.xml
@@ -52,11 +52,13 @@
             android:id="@+id/viewname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:text="Nombre"
             app:layout_constraintBottom_toTopOf="@+id/editname"
             app:layout_constraintEnd_toEndOf="@+id/editname"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/editname" />
+            app:layout_constraintStart_toStartOf="@+id/editname"
+            app:layout_constraintTop_toBottomOf="@+id/profileicon" />
 
         <EditText
             android:id="@+id/editname"
