--- a/app/src/main/res/layout/fragment_editprofile.xml
+++ b/app/src/main/res/layout/fragment_editprofile.xml
@@ -42,9 +42,10 @@
             android:id="@+id/profileicon"
             android:layout_width="132dp"
             android:layout_height="117dp"
+            android:layout_marginTop="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="120dp"
+            app:layout_constraintTop_toBottomOf="@+id/lineaGris7"
             tools:srcCompat="@tools:sample/avatars" />
 
         <!-- EditText: Nombre -->
@@ -54,9 +55,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Nombre"
-            app:layout_constraintEnd_toEndOf="@+id/editname"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/editname"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.28"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/profileicon" />
 
         <EditText
@@ -79,9 +80,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Email"
-            app:layout_constraintEnd_toEndOf="@+id/editemail"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/editemail"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.27"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editname" />
 
         <EditText
@@ -104,9 +105,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Phone"
-            app:layout_constraintEnd_toEndOf="@+id/editphone"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/editphone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.27"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editemail" />
 
         <EditText
@@ -129,9 +130,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Change password"
-            app:layout_constraintEnd_toEndOf="@+id/editPassword"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/editPassword"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.34"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editphone" />
 
         <EditText
@@ -150,14 +151,16 @@
             android:id="@+id/btnConfirm"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="100dp"
             android:backgroundTint="@color/fontMain"
             android:text="Confirm"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editPassword" />
+            app:layout_constraintTop_toBottomOf="@+id/editPassword"
+            app:layout_constraintVertical_bias="1.0" />
 
         <ImageView
             android:id="@+id/imgEye"
@@ -175,7 +178,7 @@
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="164dp"
+            android:layout_marginTop="130dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.675"
             app:layout_constraintStart_toStartOf="parent"
