--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -74,16 +74,18 @@
         android:text="TextView"
         android:textColor="@color/fontMain"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/listAct"
         app:layout_constraintEnd_toStartOf="@+id/spDate"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="439dp" />
+        app:layout_constraintTop_toBottomOf="@+id/calendar" />
 
     <Spinner
         android:id="@+id/spDate"
         android:layout_width="0dp"
         android:layout_height="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/listAct"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txtDay"
-        tools:layout_editor_absoluteY="439dp" />
+        app:layout_constraintTop_toBottomOf="@+id/calendar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
