--- a/app/src/main/res/layout/activity_recover_pass.xml
+++ b/app/src/main/res/layout/activity_recover_pass.xml
@@ -73,7 +73,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <Button
-            android:id="@+id/btnSingIn"
+            android:id="@+id/btnRecoverymail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
@@ -85,7 +85,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
+            app:layout_constraintTop_toBottomOf="@+id/editrecoverymail" />
 
         <TextView
             android:id="@+id/txtNoPass"
@@ -100,10 +100,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnSingIn" />
+            app:layout_constraintTop_toBottomOf="@+id/btnRecoverymail" />
 
         <EditText
-            android:id="@+id/editTextText2"
+            android:id="@+id/editrecoverymail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
@@ -126,6 +126,8 @@
             android:layout_marginBottom="80dp"
             android:text="Ya tienes cuenta ? Inicia sesión !"
             android:textAlignment="center"
+            android:clickable="true"
+            android:focusable="true"
             android:textColor="@color/lightGray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
